Update metadata strings
Update metadata strings

--- a/WooCommerce/Resources/AppStoreStrings.pot
+++ b/WooCommerce/Resources/AppStoreStrings.pot
@@ -49,7 +49,7 @@ msgstr ""
 
 msgctxt "v2.8-whats-new"
 msgid ""
-"No changes! 2.7 was so great, we thought we’d release it again. (Kidding! There’ll be loads of good stuff in 2.9 — we just need a little more time to perfect it.)\n"
+"We’ve rearranged some parts of Order Details for better readability and usability: Customer payment details are more prominent, and Order Notes are grouped with date headings for easier scanning. And no more awkward expanding animation when you view the Billing Details!\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
