--- a/WooCommerce/Resources/ko.lproj/Localizable.strings
+++ b/WooCommerce/Resources/ko.lproj/Localizable.strings
@@ -1,10 +1,22 @@
-/* Translation-Revision-Date: 2019-10-02 02:54:38+0000 */
+/* Translation-Revision-Date: 2019-10-17 00:54:51+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: ko_KR */
 
 /* No comment provided by engineer. */
+"%1$@ - %2$@ (Private)" = "%1$@ - %2$@(비공개)";
+
+/* Labels an order note. The user know it's a system status message. Reads like 05:30 PM - username (System) */
+"%1$@ - %2$@ (System)" = "%1$@ - %2$@(시스템)";
+
+/* Labels an order note. The user know it's visible to the customer. Reads like 05:30 PM - username (To Customer) */
+"%1$@ - %@$@ (To Customer)" = "%1$@ - %@$@(고객에게)";
+
+/* Review title. Reads as {Review author} left a review on {Product}. */
 "%1$@ left a review on %2$@" = "%1$@ left a review on %2$@";
+
+/* Payment on <date> received via (payment method title) */
+"%1$@ via %2$@" = "%2$@을(를) 통한 %1$@";
 
 /* Displays a time range followed by a specific date/time */
 "%1$@ › %2$@" = "%1$@ › %2$@";
@@ -14,6 +26,18 @@
 
 /* Review title. Reads as {Review author} left a review on {Product}. */
 "%1$@ left a review on %2$@" = "%1$@ left a review on %2$@";
+
+/* Label about product's inventory stock status shown on Products tab */
+"%ld in stock" = "%ld 재고 있음";
+
+/* Label about one product variation shown on Products tab */
+"%ld variant" = "%ld 변형";
+
+/* Label about number of variations shown on Products tab */
+"%ld variants" = "%ld 변형";
+
+/* Payment on <date> received via (payment method title) */
+"(datePaid) via (order.paymentMethodTitle)" = "(order.paymentMethodTitle)을(를) 통한 (datePaid)";
 
 /* Title for an untitled post, should match WP core */
 "(no title)" = "(제목 없음)";
@@ -51,14 +75,12 @@
    Add tracking screen - title. */
 "Add Tracking" = "추적 추가";
 
-/* Button text for adding a new order note */
+/* Accessibility label for the 'Add a note' button
+   Button text for adding a new order note */
 "Add a note" = "메모 추가";
 
-/* Accessibility label for the 'Add a note' button */
-"Add a note button" = "메모 버튼 추가";
-
 /* Accessibility label for the 'Add a tracking' button */
-"Add a tracking button" = "추적 버튼 추가";
+"Add a tracking" = "추적 추가";
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "주문에 메모 추가";
@@ -100,9 +122,6 @@
 /* Used when a remote response doesn't have a specific message for a specific request */
 "An error occurred while processing your request: " = "요청을 처리하는 동안 다음 오류가 발생했습니다. ";
 
-/* Indicates the reviewer does not have a name. It reads { Anonymous left a review} */
-"Anonymous" = "익명";
-
 /* Application Logs navigation bar title - this screen is where users view the list of application logs available to them. */
 "Application Logs" = "애플리케이션 로그";
 
@@ -131,6 +150,9 @@
 /* The plugin can not be manually updated or deactivated */
 "Auto-managed on this site" = "이 사이트에서 자동으로 관리됨";
 
+/* Awaiting payment via (payment method title) */
+"Awaiting payment via %@" = "%@을(를) 통한 결제 대기 중";
+
 /* Alert button title - dismisses alert, which cancels the log out attempt */
 "Back" = "뒤로";
 
@@ -144,12 +166,18 @@
    VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %1$i, %2$@, " = "표시줄 번호 %1$i, %2$@, ";
 
+/* Begin fulfill order button title */
+"Begin Fulfillment" = "처리 시작";
+
 /* Beta features navigation title
    Navigates to Beta features screen */
 "Beta Features" = "베타 기능";
 
-/* Billing title for customer info cell */
-"Billing details" = "청구 상세 내역";
+/* Section header title for billing address in billing information */
+"Billing Address" = "청구 주소";
+
+/* Billing Information view Title */
+"Billing Information" = "청구지 정보";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "가입하려면 _서비스 약관_에 동의해야 합니다.";
@@ -191,6 +219,9 @@
 /* No comment provided by engineer. */
 "Connecting to WordPress.com" = "워드프레스닷컴에 접속 중입니다";
 
+/* Section header title for contact details in billing information */
+"Contact Details" = "연락처 상세 정보";
+
 /* Contact Email title */
 "Contact Email" = "연락처 이메일";
 
@@ -202,15 +233,6 @@
 
 /* Part of a prompt suggesting that there is more content for the user to read. */
 "Continue reading" = "계속 읽기";
-
-/* Button title. Tapping begins log in using Google. */
-"Continue with Google" = "Continue with Google";
-
-/* Button title. Tapping begins our normal log in process. */
-"Continue with WordPress.com" = "Continue with WordPress.com";
-
-/* Shown while logging in with Apple and the app waits for the site creation process to complete. */
-"Continuing with Apple" = "Continuing with Apple";
 
 /* Copy address text button title — should be one word and as short as possible. */
 "Copy" = "복사";
@@ -249,8 +271,10 @@
    Placeholder name of a custom shipment tracking provider - Title of button to add a custom tracking provider if filtering the list yields no results. */
 "Custom Provider" = "사용자 정의 공급업체";
 
-/* Customer info section title
-   Section title for the customer's billing and shipping address */
+/* Customer info section title */
+"Customer" = "고객";
+
+/* Section title for the customer's billing and shipping address */
 "Customer Information" = "고객 정보";
 
 /* Customer note section title
@@ -395,9 +419,6 @@
 /* Order Fulfillment Title */
 "Fulfill Order #(order.number)" = "주문 #(order.number) 처리";
 
-/* Fulfill order button title */
-"Fulfill order" = "주문 처리";
-
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "스토어의 상품 실적에 대한 인사이트 확인";
 
@@ -426,16 +447,14 @@
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "앱 개선 지원";
 
-/* Footer text to hide the billing cell */
-"Hide billing" = "청구 숨기기";
-
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "해제된 경우 메모는 비공개가 됩니다.";
 
 /* My Store > Settings > Beta features > Switch stats version */
-"Improved stats" = "Improved stats";
+"Improved stats" = "향상된 통계";
 
-/* Display label for the product's inventory stock status */
+/* Display label for the product's inventory stock status
+   Label about product's inventory stock status shown on Products tab */
 "In stock" = "재고 있음";
 
 /* Application's Inactive State */
@@ -524,10 +543,10 @@
 "Log in failed. Please try again." = "로그인에 실패했습니다. 다시 시도하세요.";
 
 /* Instruction text on the login's email address screen. */
-"Log in to the WordPress.com account you used to connect Jetpack." = "젯팩에 연결하는 데 사용한 워드프레스닷컴 계정으로 로그인하세요.";
+"Log in to WordPress.com using an email address to manage all your WordPress sites." = "이메일 주소를 입력하여 워드프레스닷컴에 로그인하고 회원님의 모든 WordPress 사이트를 관리하세요.";
 
 /* Instruction text on the login's email address screen. */
-"Log in to your WordPress.com account with your email address." = "Log in to your WordPress.com account with your email address.";
+"Log in to the WordPress.com account you used to connect Jetpack." = "젯팩에 연결하는 데 사용한 워드프레스닷컴 계정으로 로그인하세요.";
 
 /* Authentication Login Button */
 "Log in with Jetpack" = "젯팩으로 로그인";
@@ -628,12 +647,16 @@
 /* Default text for Top Performers section when no data exists for a given period. */
 "No activity this period" = "이 기간에 활동이 없음";
 
-/* Order details > customer info > billing details. This is where the address would normally display.
+/* Order details > customer info > billing information. This is where the address would normally display.
    Order details > customer info > shipping details. This is where the address would normally display. */
 "No address specified." = "주소가 지정되지 않았습니다.";
 
 /* Text displayed when no data is available for revenue chart. */
 "No data available" = "사용 가능한 데이터 없음";
+
+/* Search Products (Empty State)
+   The text on the placeholder overlay when there are no products on the Products tab */
+"No products yet" = "아직 제품이 없음";
 
 /* Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "선택한 기준에 맞는 결과가 없음";
@@ -642,13 +665,12 @@
 "No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Text displayed when no order data are available for the selected time range. */
-"No revenue this period" = "No revenue this period";
+"No revenue this period" = "이 기간에 해당하는 수익이 없습니다.";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "아직 배송되지 않음";
 
-/* Labels an order note to let user know it's visible to the customer
-   Spoken accessibility label for an icon image that indicates it's a note to the customer. */
+/* Spoken accessibility label for an icon image that indicates it's a note to the customer. */
 "Note to customer" = "고객에게 남길 메모";
 
 /* Label prefix. Example: 'Number of files: 2' */
@@ -694,9 +716,6 @@
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "선택적 추적 정보";
 
-/* Label for button to log in using site address. Underscores _..._ denote underline. */
-"Or log in by _entering your site address_." = "Or log in by _entering your site address_.";
-
 /* Add a note screen - title. Example: Order #15
    Order number title */
 "Order #(viewModel.order.number)" = "주문 #(viewModel.order.number)";
@@ -709,6 +728,9 @@
 
 /* Change order status screen - Screen title */
 "Order Status" = "주문 상태";
+
+/* Order Total label for payment view */
+"Order Total" = "주문 총계";
 
 /* Order fulfillment success notice */
 "Order marked as fulfilled" = "주문이 이행됨으로 표시됨";
@@ -732,18 +754,15 @@
 /* Product section title */
 "PRODUCT" = "상품";
 
+/* The title for the customer payment cell */
+"Paid By Customer" = "고객 결제";
+
 /* Login dialog password placeholder
    Password placeholder */
 "Password" = "비밀번호";
 
 /* Payment section title */
 "Payment" = "결제";
-
-/* Payment of <currency symbol><payment total> received via (payment method title) */
-"Payment of (subject.totalValue) received via (order.paymentMethodTitle)" = "(order.paymentMethodTitle)을(를) 통해 (subject.totalValue) 결제 받음";
-
-/* Payment of <currency symbol><payment total> received via (payment method title) */
-"Payment of (totalValue) received via (order.paymentMethodTitle)" = "(order.paymentMethodTitle)을(를) 통해 (totalValue) 결제 받음";
 
 /* Display label for the product's pending status
    Display label for the review's pending status */
@@ -769,9 +788,6 @@
 
 /* Error message displayed when the user attempts use an invalid email address. */
 "Please enter a valid email address." = "유효한 이메일 주소를 입력해주세요.";
-
-/* No comment provided by engineer. */
-"Please enter the password for your WordPress.com account to log in with your Apple ID." = "Please enter the password for your WordPress.com account to log in with your Apple ID.";
 
 /* Popup message to ask for user credentials (fields shown below). */
 "Please enter your credentials" = "자격을 입력하세요";
@@ -807,8 +823,7 @@
 /* Display label for the product's private status */
 "Private" = "비공개";
 
-/* Labels an order note to let the user know it's private and not seen by the customer
-   Spoken accessibility label for an icon image that indicates it's a private note and is not seen by the customer. */
+/* Spoken accessibility label for an icon image that indicates it's a private note and is not seen by the customer. */
 "Private note" = "비공개 메모";
 
 /* Description for Top Performers left column header
@@ -818,7 +833,14 @@
 /* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
 "Product %ld has been removed from your store" = "제품 %ld이(가) 스토어에서 제거되었습니다.";
 
-/* Title of the Products tab — plural form of Product */
+/* Title of the view containing a single Product Review */
+"Product Review" = "제품 검토";
+
+/* Product Total label for payment view */
+"Product Total" = "제품 합계";
+
+/* Title of the Products tab — plural form of Product
+   Title that appears on top of the Product List screen (plural form of the word Product). */
 "Products" = "상품";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to call or message the billing customer. */
@@ -874,6 +896,9 @@
 /* VoiceOver accessibility hint, informing the user the button can be used to search orders. */
 "Retrieves a list of orders that contain a given keyword." = "지정된 키워드가 있는 주문 목록을 검색합니다.";
 
+/* VoiceOver accessibility hint, informing the user the button can be used to search products. */
+"Retrieves a list of products that contain a given keyword." = "지정된 키워드가 있는 제품 목록을 검색합니다.";
+
 /* Retry Action
    Retry the last action */
 "Retry" = "재실행";
@@ -904,8 +929,14 @@
 /* Orders Search Placeholder */
 "Search all orders" = "모든 주문 검색";
 
+/* Products Search Placeholder */
+"Search all products" = "모든 제품 검색";
+
 /* Search Orders */
 "Search orders" = "주문 검색";
+
+/* Search Products */
+"Search products" = "상품 검색";
 
 /* Page title for the select a different store screen */
 "Select Store" = "스토어 선택";
@@ -952,8 +983,8 @@
 /* Add / Edit shipping provider. Title of cell presenting name */
 "Shipping provider" = "배송 업체";
 
-/* Footer text to show the billing cell */
-"Show billing" = "청구 표시";
+/* VoiceOver accessibility hint, informing the user that the button can be used to view billing information. */
+"Show the billing details for this order." = "이 주문에 대한 청구 상세 내역을 표시합니다.";
 
 /* Accessibility hint for Delete Shipment button in Order details screen */
 "Shows more options." = "옵션 더 보기.";
@@ -978,6 +1009,9 @@
 
 /* Label prefix. Example: 'Size: 8 x 10 x 10 cm' */
 "Size:" = "크기:";
+
+/* Indicates the reviewer does not have a name. It reads { Someone left a review} */
+"Someone" = "다른 사람";
 
 /* This error message occurs when a user tries to create a username that contains an invalid phrase for WordPress.com. The %@ may include the phrase in question if it was sent down by the API */
 "Sorry, but your username contains an invalid phrase%@." = "죄송합니다, 사용자명에 잘못된 구문 %@이 포함되어 있습니다";
@@ -1049,17 +1083,11 @@
 /* VoiceOver accessibility label for the store revenue chart's Y-axis. */
 "Store revenue chart: Y Axis" = "스토어 수입 차트: Y축";
 
-/* Subtotal label for payment view */
-"Subtotal" = "소계";
-
 /* This action allows the user to change stores without logging out and logging back in again. */
 "Switch Store" = "스토어 전환";
 
 /* Message presented after users switch to a new store. Reads like: Switched to {store name}. You will only receive notifications from this store. */
 "Switched to (newStoreName). You will only receive notifications from this store." = "(newStoreName)(으)로 전환했습니다. 이 스토어에서만 알림을 받습니다.";
-
-/* Labels an order note to let user know it's a system status message */
-"System status" = "시스템 상태";
 
 /* Tax label for total taxes line */
 "Tax:" = "세금:";
@@ -1109,6 +1137,9 @@
 /* Displayed whenever a Notification that was onscreen got deleted. */
 "The notification has been removed" = "알림이 제거되었습니다!";
 
+/* Displayed whenever a review that was onscreen got deleted. */
+"The review has been removed" = "리뷰가 제거되었습니다.";
+
 /* No comment provided by engineer. */
 "The server returned an empty response. This usually means you need to increase the memory limit for your site." = "서버에서 응답이 없습니다. 이는 일반적으로 사이트에 대한 메모리 제한을 늘려야 한다는 뜻입니다.";
 
@@ -1146,7 +1177,7 @@
 "This app requires Jetpack to connect to your Store. <br \/> Read the <a href=\"https:\/\/jetpack.com\/support\/getting-started-with-jetpack\/\">configuration instructions<\/a>." = "이 앱에서 회원님의 스토어에 연결하려면 젯팩이 있어야 합니다. <br \/> <a href=\"https:\/\/jetpack.com\/support\/getting-started-with-jetpack\/\">구성 지침<\/a>을 읽어보세요.";
 
 /* Body text of alert warning users to upgrade to WC 3.5. */
-"This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app." = "This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app.";
+"This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app." = "이 앱을 사용하려면 서버에 WooCommerce 3.5를 설치해야 합니다. 설치되지 않은 경우 앱이 정상적으로 작동하지 않습니다. 이 앱을 계속 사용하려면 가능한 한 빨리 업데이트하세요.";
 
 /* An error message informing the user the email address they entered did not match a WordPress.com account. */
 "This email address is not registered on WordPress.com." = "이 이메일 주소는 워드프레스닷컴에 등록되어 있지 않습니다.";
@@ -1178,9 +1209,6 @@
 
 /* Used when a Reader Topic is not found for a specific id */
 "Topic not found for id:" = "id에 대한 게시글 없음:";
-
-/* Total label for payment view */
-"Total" = "총";
 
 /* Product details screen - total orders descriptive label */
 "Total Orders" = "총 주문 수";
@@ -1216,14 +1244,14 @@
 /* The action of the top banner on Dashboard that indicates new stats is available */
 "Try It Now" = "지금 사용해 보기";
 
-/* No comment provided by engineer. */
+/* Button to trigger connection to another account in store picker */
 "Try another account" = "다른 계정 사용해 보기";
 
 /* The title of the top banner on Dashboard that indicates new stats is available */
 "Try our improved stats" = "향상된 통계를 사용해 보세요.";
 
 /* My Store > Settings > Beta features > Stats version description */
-"Try the new stats available with the WooCommerce Admin plugin" = "Try the new stats available with the WooCommerce Admin plugin";
+"Try the new stats available with the WooCommerce Admin plugin" = "WooCommerce 관리자 플러그인과 함께 사용할 수 있는 새 통계 사용해 보기";
 
 /* When social login fails, this button offers to let the user try again with a differen email address */
 "Try with another email" = "다른 이메일로 시도";
@@ -1285,7 +1313,8 @@
 /* Undo Action */
 "Undo" = "실행 취소";
 
-/* Unknown Application State */
+/* Unknown Application State
+   Unknown product name, displayed in a review */
 "Unknown" = "알 수 없음";
 
 /* No comment provided by engineer. */
@@ -1304,16 +1333,16 @@
 "Up to seven days՚ worth of logs are saved." = "최대 7일 상당의 로그가 저장됩니다.";
 
 /* Title of alert warning users to upgrade to WC 3.5 WITH a site name. It reads: Update {site name} to WooCommerce 3.5 to use this app */
-"Update %@ to WooCommerce 3.5" = "Update %@ to WooCommerce 3.5";
+"Update %@ to WooCommerce 3.5" = "%@을(를) WooCommerce 3.5로 업데이트";
 
 /* Update instructions button title shown in alert warning users to upgrade to WC 3.5. */
-"Update Instructions" = "Update Instructions";
+"Update Instructions" = "업데이트 지침";
 
 /* Accessibility label for the button to update the order status in Order Details */
 "Update Order Status" = "주문 상태 업데이트";
 
 /* Title of alert warning users to upgrade to WC 3.5. */
-"Update to WooCommerce 3.5 to keep using this app" = "Update to WooCommerce 3.5 to keep using this app";
+"Update to WooCommerce 3.5 to keep using this app" = "이 앱을 계속 사용하려면 WooCommerce 3.5로 업데이트하세요.";
 
 /* Singular of 'hour' — date and time string that represents the time interval since last data update when exactly 1 hour ago. Usage example: Updated 1 hour ago */
 "Updated %ld hour ago" = "%ld시간 전에 업데이트됨";
@@ -1348,6 +1377,10 @@
 
 /* View application log cell title */
 "View Application Log" = "애플리케이션 로그 보기";
+
+/* Accessibility label for the 'View Billing Information' button
+   Button on bottom of Customer's information to show the billing details */
+"View Billing Information" = "청구 정보 보기";
 
 /* The descriptive label. Tapping the row will open the affliate product's link in a web view. */
 "View affiliate product" = "제휴 제품 보기";
@@ -1489,4 +1522,7 @@
 
 /* About View's Footer Text. The variable is the current year */
 "© %@ Automattic, Inc." = "© %@ Automattic, Inc.";
+
+/* Customer note, wrapped in quotes */
+"“%@”" = "“%@”";
 
