--- a/WooCommerce/Resources/zh-Hant.lproj/Localizable.strings
+++ b/WooCommerce/Resources/zh-Hant.lproj/Localizable.strings
@@ -1,10 +1,22 @@
-/* Translation-Revision-Date: 2019-10-03 00:54:03+0000 */
+/* Translation-Revision-Date: 2019-10-16 04:54:04+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/2.4.0-alpha */
 /* Language: zh_TW */
 
 /* No comment provided by engineer. */
+"%1$@ - %2$@ (Private)" = "%1$@ - %2$@ (隱藏)";
+
+/* Labels an order note. The user know it's a system status message. Reads like 05:30 PM - username (System) */
+"%1$@ - %2$@ (System)" = "%1$@ - %2$@ (系統)";
+
+/* Labels an order note. The user know it's visible to the customer. Reads like 05:30 PM - username (To Customer) */
+"%1$@ - %@$@ (To Customer)" = "%1$@ - %@$@ (向顧客顯示)";
+
+/* Review title. Reads as {Review author} left a review on {Product}. */
 "%1$@ left a review on %2$@" = "%1$@ left a review on %2$@";
+
+/* Payment on <date> received via (payment method title) */
+"%1$@ via %2$@" = "已在 %1$@ 收到 %2$@ 付款";
 
 /* Displays a time range followed by a specific date/time */
 "%1$@ › %2$@" = "%1$@ › %2$@";
@@ -14,6 +26,18 @@
 
 /* Review title. Reads as {Review author} left a review on {Product}. */
 "%1$@ left a review on %2$@" = "%1$@ left a review on %2$@";
+
+/* Label about product's inventory stock status shown on Products tab */
+"%ld in stock" = "%ld 尚有存貨";
+
+/* Label about one product variation shown on Products tab */
+"%ld variant" = "%ld 的子類選項";
+
+/* Label about number of variations shown on Products tab */
+"%ld variants" = "%ld 個子類選項";
+
+/* Payment on <date> received via (payment method title) */
+"(datePaid) via (order.paymentMethodTitle)" = "已在 (datePaid) 收到 (order.paymentMethodTitle) 付款";
 
 /* Title for an untitled post, should match WP core */
 "(no title)" = "（沒有標題）";
@@ -51,14 +75,12 @@
    Add tracking screen - title. */
 "Add Tracking" = "新增追蹤";
 
-/* Button text for adding a new order note */
+/* Accessibility label for the 'Add a note' button
+   Button text for adding a new order note */
 "Add a note" = "新增備註";
 
-/* Accessibility label for the 'Add a note' button */
-"Add a note button" = "新增備註按鈕";
-
 /* Accessibility label for the 'Add a tracking' button */
-"Add a tracking button" = "新增追蹤按鈕";
+"Add a tracking" = "新增追蹤";
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to add an order note. */
 "Adds a note to an order" = "在訂單中新增備註";
@@ -100,9 +122,6 @@
 /* Used when a remote response doesn't have a specific message for a specific request */
 "An error occurred while processing your request: " = "處理要求時發生錯誤：";
 
-/* Indicates the reviewer does not have a name. It reads { Anonymous left a review} */
-"Anonymous" = "匿名";
-
 /* Application Logs navigation bar title - this screen is where users view the list of application logs available to them. */
 "Application Logs" = "應用程式記錄檔";
 
@@ -131,6 +150,9 @@
 /* The plugin can not be manually updated or deactivated */
 "Auto-managed on this site" = "在此網站上自動管理";
 
+/* Awaiting payment via (payment method title) */
+"Awaiting payment via %@" = "正在等待透過 %@ 支付的款項";
+
 /* Alert button title - dismisses alert, which cancels the log out attempt */
 "Back" = "上一步";
 
@@ -144,12 +166,18 @@
    VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %1$i, %2$@, " = "長條數目 %1$i, %2$@,";
 
+/* Begin fulfill order button title */
+"Begin Fulfillment" = "開始履行";
+
 /* Beta features navigation title
    Navigates to Beta features screen */
 "Beta Features" = "Beta 功能";
 
-/* Billing title for customer info cell */
-"Billing details" = "帳單詳細資料";
+/* Section header title for billing address in billing information */
+"Billing Address" = "帳單地址";
+
+/* Billing Information view Title */
+"Billing Information" = "帳單資訊";
 
 /* Legal disclaimer for signup buttons, the underscores _..._ denote underline */
 "By signing up, you agree to our _Terms of Service_." = "註冊即代表你同意我們的「服務條款」。";
@@ -191,6 +219,9 @@
 /* No comment provided by engineer. */
 "Connecting to WordPress.com" = "正在連線至 WordPress.com";
 
+/* Section header title for contact details in billing information */
+"Contact Details" = "聯絡詳細資料";
+
 /* Contact Email title */
 "Contact Email" = "聯絡電子郵件";
 
@@ -202,15 +233,6 @@
 
 /* Part of a prompt suggesting that there is more content for the user to read. */
 "Continue reading" = "繼續閱讀";
-
-/* Button title. Tapping begins log in using Google. */
-"Continue with Google" = "Continue with Google";
-
-/* Button title. Tapping begins our normal log in process. */
-"Continue with WordPress.com" = "Continue with WordPress.com";
-
-/* Shown while logging in with Apple and the app waits for the site creation process to complete. */
-"Continuing with Apple" = "Continuing with Apple";
 
 /* Copy address text button title — should be one word and as short as possible. */
 "Copy" = "複製";
@@ -249,8 +271,10 @@
    Placeholder name of a custom shipment tracking provider - Title of button to add a custom tracking provider if filtering the list yields no results. */
 "Custom Provider" = "自訂供應商";
 
-/* Customer info section title
-   Section title for the customer's billing and shipping address */
+/* Customer info section title */
+"Customer" = "顧客";
+
+/* Section title for the customer's billing and shipping address */
 "Customer Information" = "顧客資料";
 
 /* Customer note section title
@@ -395,9 +419,6 @@
 /* Order Fulfillment Title */
 "Fulfill Order #(order.number)" = "履行訂單編號 (order.number)";
 
-/* Fulfill order button title */
-"Fulfill order" = "履行訂單";
-
 /* Description for Top Performers section of My Store tab. */
 "Gain insights into how products are performing on your store" = "深入瞭解產品在商店上的成效";
 
@@ -426,16 +447,14 @@
 /* My Store > Settings > Privacy settings section */
 "Help Improve The App" = "協助改善應用程式";
 
-/* Footer text to hide the billing cell */
-"Hide billing" = "隱藏帳單";
-
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "若停用，此備註將變成私人狀態";
 
 /* My Store > Settings > Beta features > Switch stats version */
-"Improved stats" = "Improved stats";
+"Improved stats" = "改善的統計資料";
 
-/* Display label for the product's inventory stock status */
+/* Display label for the product's inventory stock status
+   Label about product's inventory stock status shown on Products tab */
 "In stock" = "尚有存貨";
 
 /* Application's Inactive State */
@@ -524,10 +543,10 @@
 "Log in failed. Please try again." = "登入失敗，請再試一次。";
 
 /* Instruction text on the login's email address screen. */
-"Log in to the WordPress.com account you used to connect Jetpack." = "請登入你用來連結 Jetpack 的 WordPress.com 帳號。";
+"Log in to WordPress.com using an email address to manage all your WordPress sites." = "使用電子郵件地址登入 WordPress.com，即可管理你的所有 WordPress 網站。";
 
 /* Instruction text on the login's email address screen. */
-"Log in to your WordPress.com account with your email address." = "Log in to your WordPress.com account with your email address.";
+"Log in to the WordPress.com account you used to connect Jetpack." = "請登入你用來連結 Jetpack 的 WordPress.com 帳號。";
 
 /* Authentication Login Button */
 "Log in with Jetpack" = "透過 Jetpack 登入";
@@ -628,12 +647,16 @@
 /* Default text for Top Performers section when no data exists for a given period. */
 "No activity this period" = "此期間沒有任何活動";
 
-/* Order details > customer info > billing details. This is where the address would normally display.
+/* Order details > customer info > billing information. This is where the address would normally display.
    Order details > customer info > shipping details. This is where the address would normally display. */
 "No address specified." = "指定任何地址";
 
 /* Text displayed when no data is available for revenue chart. */
 "No data available" = "目前沒有資料";
+
+/* Search Products (Empty State)
+   The text on the placeholder overlay when there are no products on the Products tab */
+"No products yet" = "尚未有任何產品";
 
 /* Orders List (Empty State + Filters) */
 "No results for the selected criteria" = "找不到與指定條件相符的結果";
@@ -642,13 +665,12 @@
 "No results found for (term)\nAdd a custom provider" = "No results found for (term)\nAdd a custom provider";
 
 /* Text displayed when no order data are available for the selected time range. */
-"No revenue this period" = "No revenue this period";
+"No revenue this period" = "此期間沒有收益";
 
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "尚未運送。";
 
-/* Labels an order note to let user know it's visible to the customer
-   Spoken accessibility label for an icon image that indicates it's a note to the customer. */
+/* Spoken accessibility label for an icon image that indicates it's a note to the customer. */
 "Note to customer" = "給顧客的備註";
 
 /* Label prefix. Example: 'Number of files: 2' */
@@ -694,9 +716,6 @@
 /* No comment provided by engineer. */
 "Optional Tracking Information" = "選用追蹤資訊";
 
-/* Label for button to log in using site address. Underscores _..._ denote underline. */
-"Or log in by _entering your site address_." = "Or log in by _entering your site address_.";
-
 /* Add a note screen - title. Example: Order #15
    Order number title */
 "Order #(viewModel.order.number)" = "訂單編號 (viewModel.order.number)";
@@ -709,6 +728,9 @@
 
 /* Change order status screen - Screen title */
 "Order Status" = "訂單狀態";
+
+/* Order Total label for payment view */
+"Order Total" = "訂單總額";
 
 /* Order fulfillment success notice */
 "Order marked as fulfilled" = "訂單標示為已履行";
@@ -732,18 +754,15 @@
 /* Product section title */
 "PRODUCT" = "產品";
 
+/* The title for the customer payment cell */
+"Paid By Customer" = "顧客付款";
+
 /* Login dialog password placeholder
    Password placeholder */
 "Password" = "密碼";
 
 /* Payment section title */
 "Payment" = "付款";
-
-/* Payment of <currency symbol><payment total> received via (payment method title) */
-"Payment of (subject.totalValue) received via (order.paymentMethodTitle)" = "已透過 (order.paymentMethodTitle) 收到 (subject.totalValue) 付款";
-
-/* Payment of <currency symbol><payment total> received via (payment method title) */
-"Payment of (totalValue) received via (order.paymentMethodTitle)" = "已透過 (order.paymentMethodTitle) 收到 (totalValue) 付款";
 
 /* Display label for the product's pending status
    Display label for the review's pending status */
@@ -769,9 +788,6 @@
 
 /* Error message displayed when the user attempts use an invalid email address. */
 "Please enter a valid email address." = "請輸入有效的電子郵件位址";
-
-/* No comment provided by engineer. */
-"Please enter the password for your WordPress.com account to log in with your Apple ID." = "Please enter the password for your WordPress.com account to log in with your Apple ID.";
 
 /* Popup message to ask for user credentials (fields shown below). */
 "Please enter your credentials" = "請輸入你的密碼";
@@ -807,8 +823,7 @@
 /* Display label for the product's private status */
 "Private" = "私人";
 
-/* Labels an order note to let the user know it's private and not seen by the customer
-   Spoken accessibility label for an icon image that indicates it's a private note and is not seen by the customer. */
+/* Spoken accessibility label for an icon image that indicates it's a private note and is not seen by the customer. */
 "Private note" = "私人備註";
 
 /* Description for Top Performers left column header
@@ -818,7 +833,14 @@
 /* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
 "Product %ld has been removed from your store" = "已從你的商店移除產品 %ld";
 
-/* Title of the Products tab — plural form of Product */
+/* Title of the view containing a single Product Review */
+"Product Review" = "產品評論";
+
+/* Product Total label for payment view */
+"Product Total" = "產品總額";
+
+/* Title of the Products tab — plural form of Product
+   Title that appears on top of the Product List screen (plural form of the word Product). */
 "Products" = "產品";
 
 /* VoiceOver accessibility hint, informing the user that the row can be tapped to call or message the billing customer. */
@@ -874,6 +896,9 @@
 /* VoiceOver accessibility hint, informing the user the button can be used to search orders. */
 "Retrieves a list of orders that contain a given keyword." = "擷取內含指定關鍵字的訂單清單。";
 
+/* VoiceOver accessibility hint, informing the user the button can be used to search products. */
+"Retrieves a list of products that contain a given keyword." = "擷取含有指定關鍵字的產品清單。";
+
 /* Retry Action
    Retry the last action */
 "Retry" = "重試";
@@ -904,8 +929,14 @@
 /* Orders Search Placeholder */
 "Search all orders" = "搜尋全部訂單";
 
+/* Products Search Placeholder */
+"Search all products" = "搜尋所有產品";
+
 /* Search Orders */
 "Search orders" = "搜尋訂單";
+
+/* Search Products */
+"Search products" = "搜尋產品";
 
 /* Page title for the select a different store screen */
 "Select Store" = "選取商店";
@@ -952,8 +983,8 @@
 /* Add / Edit shipping provider. Title of cell presenting name */
 "Shipping provider" = "物流供應商";
 
-/* Footer text to show the billing cell */
-"Show billing" = "顯示帳單";
+/* VoiceOver accessibility hint, informing the user that the button can be used to view billing information. */
+"Show the billing details for this order." = "顯示此訂單的帳單詳細資料。";
 
 /* Accessibility hint for Delete Shipment button in Order details screen */
 "Shows more options." = "顯示更多選項。";
@@ -978,6 +1009,9 @@
 
 /* Label prefix. Example: 'Size: 8 x 10 x 10 cm' */
 "Size:" = "大小：";
+
+/* Indicates the reviewer does not have a name. It reads { Someone left a review} */
+"Someone" = "某人";
 
 /* This error message occurs when a user tries to create a username that contains an invalid phrase for WordPress.com. The %@ may include the phrase in question if it was sent down by the API */
 "Sorry, but your username contains an invalid phrase%@." = "很抱歉，你的使用者名稱含有無效的字詞 %@。";
@@ -1049,17 +1083,11 @@
 /* VoiceOver accessibility label for the store revenue chart's Y-axis. */
 "Store revenue chart: Y Axis" = "商店收益圖：Y 軸";
 
-/* Subtotal label for payment view */
-"Subtotal" = "小計";
-
 /* This action allows the user to change stores without logging out and logging back in again. */
 "Switch Store" = "切換商店";
 
 /* Message presented after users switch to a new store. Reads like: Switched to {store name}. You will only receive notifications from this store. */
 "Switched to (newStoreName). You will only receive notifications from this store." = "已切換至 (newStoreName)。您只會收到此商店傳送的通知。";
-
-/* Labels an order note to let user know it's a system status message */
-"System status" = "系統狀態";
 
 /* Tax label for total taxes line */
 "Tax:" = "稅金：";
@@ -1109,6 +1137,9 @@
 /* Displayed whenever a Notification that was onscreen got deleted. */
 "The notification has been removed" = "通知已移除！";
 
+/* Displayed whenever a review that was onscreen got deleted. */
+"The review has been removed" = "已移除評論";
+
 /* No comment provided by engineer. */
 "The server returned an empty response. This usually means you need to increase the memory limit for your site." = "伺服器傳回空白回應。這通常代表你必須增加網站的記憶體限制。";
 
@@ -1146,7 +1177,7 @@
 "This app requires Jetpack to connect to your Store. <br \/> Read the <a href=\"https:\/\/jetpack.com\/support\/getting-started-with-jetpack\/\">configuration instructions<\/a>." = "此應用程式需要 Jetpack 才能連結至你的商店。<br \/>請閱讀<a href=\"https:\/\/jetpack.com\/support\/getting-started-with-jetpack\/\">設定說明<\/a>。";
 
 /* Body text of alert warning users to upgrade to WC 3.5. */
-"This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app." = "This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app.";
+"This app requires that you install WooCommerce 3.5 on your server, and won't work properly without it. Update as soon as possible to continue using this app." = "此應用程式要求你在伺服器上安裝 WooCommerce 3.5，否則無法正常運作。請儘快更新以繼續使用此應用程式。";
 
 /* An error message informing the user the email address they entered did not match a WordPress.com account. */
 "This email address is not registered on WordPress.com." = "這個電子郵件地址沒有在 WordPress.com 上註冊。";
@@ -1178,9 +1209,6 @@
 
 /* Used when a Reader Topic is not found for a specific id */
 "Topic not found for id:" = "找不到 ID 的主題：";
-
-/* Total label for payment view */
-"Total" = "總計";
 
 /* Product details screen - total orders descriptive label */
 "Total Orders" = "總訂單數";
@@ -1216,14 +1244,14 @@
 /* The action of the top banner on Dashboard that indicates new stats is available */
 "Try It Now" = "立即試試";
 
-/* No comment provided by engineer. */
+/* Button to trigger connection to another account in store picker */
 "Try another account" = "嘗試其他帳號";
 
 /* The title of the top banner on Dashboard that indicates new stats is available */
 "Try our improved stats" = "體驗我們改善的統計資料效能";
 
 /* My Store > Settings > Beta features > Stats version description */
-"Try the new stats available with the WooCommerce Admin plugin" = "Try the new stats available with the WooCommerce Admin plugin";
+"Try the new stats available with the WooCommerce Admin plugin" = "憑藉 WooCommerce Admin 外掛程式嘗試可用的新統計資料";
 
 /* When social login fails, this button offers to let the user try again with a differen email address */
 "Try with another email" = "請嘗試使用其他電子郵件登入";
@@ -1285,7 +1313,8 @@
 /* Undo Action */
 "Undo" = "復原";
 
-/* Unknown Application State */
+/* Unknown Application State
+   Unknown product name, displayed in a review */
 "Unknown" = "不明";
 
 /* No comment provided by engineer. */
@@ -1304,16 +1333,16 @@
 "Up to seven days՚ worth of logs are saved." = "可儲存最多七天的記錄。";
 
 /* Title of alert warning users to upgrade to WC 3.5 WITH a site name. It reads: Update {site name} to WooCommerce 3.5 to use this app */
-"Update %@ to WooCommerce 3.5" = "Update %@ to WooCommerce 3.5";
+"Update %@ to WooCommerce 3.5" = "將 %@ 更新至 WooCommerce 3.5";
 
 /* Update instructions button title shown in alert warning users to upgrade to WC 3.5. */
-"Update Instructions" = "Update Instructions";
+"Update Instructions" = "更新指示";
 
 /* Accessibility label for the button to update the order status in Order Details */
 "Update Order Status" = "已更新訂單狀態";
 
 /* Title of alert warning users to upgrade to WC 3.5. */
-"Update to WooCommerce 3.5 to keep using this app" = "Update to WooCommerce 3.5 to keep using this app";
+"Update to WooCommerce 3.5 to keep using this app" = "更新至 WooCommerce 3.5 以繼續使用此應用程式";
 
 /* Singular of 'hour' — date and time string that represents the time interval since last data update when exactly 1 hour ago. Usage example: Updated 1 hour ago */
 "Updated %ld hour ago" = "%ld 小時前已更新";
@@ -1348,6 +1377,10 @@
 
 /* View application log cell title */
 "View Application Log" = "檢視應用程式記錄檔";
+
+/* Accessibility label for the 'View Billing Information' button
+   Button on bottom of Customer's information to show the billing details */
+"View Billing Information" = "檢視帳單資訊";
 
 /* The descriptive label. Tapping the row will open the affliate product's link in a web view. */
 "View affiliate product" = "查看附屬商品";
@@ -1489,4 +1522,7 @@
 
 /* About View's Footer Text. The variable is the current year */
 "© %@ Automattic, Inc." = "© %@ Automattic, Inc.";
+
+/* Customer note, wrapped in quotes */
+"“%@”" = "「%@」";
 
